--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neflix</title>
-    <link href="neflix.css" rel="stylesheet">
+    <link href="my.css" rel="stylesheet">
 </head>
 <body>
     <div class="main-div">
